--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 
     .leistungen-button .arrow {
       font-size: 24px; /* Größerer Pfeil */
-      font-weight: bold; /* Dickerer Pfeil */
+      font-weight: 300; /* Pfeil nicht mehr fett darstellen */
       margin-left: 8px; /* Kleiner Abstand zum Text */
     }
 
@@ -1189,7 +1189,7 @@
       In unserer Praxis bieten wir ein breites Spektrum an hausärztlichen Leistungen – von Vorsorgeuntersuchungen über moderne Diagnostik bis zur <span class="highlight-beratung">individuellen Beratung</span> und Behandlung chronischer Erkrankungen. Ihr Wohlbefinden und eine persönliche Betreuung stehen dabei stets im Mittelpunkt.
     </div>
     <div class="leistungen-button-container">
-      <a href="/leistungen" class="leistungen-button">Alle Leistungen <span class="arrow">&rarr;</span></a>
+      <a href="/leistungen" class="leistungen-button">Alle Leistungen <span class="arrow">&#10140;</span></a>
     </div>
   </div>
 
