--- a/index.html
+++ b/index.html
@@ -389,14 +389,55 @@
       margin-bottom: 40px; /* Abstand zwischen den Reihen, falls umgebrochen wird */
     }
 
-    .leistung-icon {
-      width: fit-content; /* Beispielbreite für das Icon */
-      height: 250px; /* Gleiche Höhe für alle Icons */
+    .leistung-item-link {
+      text-decoration: none;
+      color: inherit;
+      display: block; /* Wichtig, damit der Link den Bereich einnimmt */
+      position: relative; /* Für den Button */
+    }
+
+    .leistung-image-wrapper {
+      position: relative;
+      overflow: hidden; /* Wichtig für den Zoom-Effekt und um den Button sauber zu halten */
+      height: 250px; /* Höhe vom ursprünglichen .leistung-icon */
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 15px;
+      margin-bottom: 15px; /* Abstand nach unten, wie beim ursprünglichen .leistung-icon */
+      background-color: #f0f0f0; /* Heller Hintergrund, falls Bilder Transparenz haben */
+      border-radius: 4px; /* Leichte Abrundung für den Wrapper */
+    }
+
+    .leistung-icon {
+      /* width: fit-content; wird durch max-width ersetzt */
+      /* height: 250px; wird vom Wrapper übernommen */
+      /* display: flex; etc. wird vom Wrapper übernommen */
+      /* margin-bottom: 15px; wird vom Wrapper übernommen */
+      max-width: 100%;
+      max-height: 100%;
       object-fit: contain; /* Stellt sicher, dass das Bild passt, ohne es zu verzerren */
+      transition: transform 0.35s ease-in-out, filter 0.35s ease-in-out;
+    }
+
+    .mehr-erfahren-button {
+      position: absolute;
+      bottom: 15px; /* Abstand von unten */
+      right: 15px; /* Abstand von rechts */
+      /* transform: translate(-50%, -50%); wird entfernt */
+      background-color: rgba(110, 55, 14, 0.8); /* #6e370e mit 0.8 Transparenz */
+      color: white;
+      padding: 12px 24px;
+      border-radius: 50px; /* Pillenform */
+      opacity: 0;
+      /* visibility: hidden; wird entfernt, Steuerung nur über opacity */
+      /* Nur die Deckkraft animieren; visibility schaltet beim Hover sofort um. */
+      transition: opacity 0.35s ease-in-out;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 500; /* Medium */
+      font-size: 16px;
+      text-align: center;
+      pointer-events: none; /* Damit der Klick auf den Link durchgeht */
+      white-space: nowrap;
     }
 
     .leistung-line {
@@ -405,6 +446,16 @@
       background-color: #6e370e; /* Farbe der Linie */
       margin-top: 60px; /* Weiter nach unten verschoben */
       margin-bottom: -5px; /* Weiter reduzierter Abstand zur Beschriftung */
+    }
+    
+    .leistung-item-link:hover .leistung-image-wrapper .leistung-icon {
+      transform: scale(0.9); /* Herauszoomen */
+      filter: blur(3px); /* Nur noch unscharf */
+    }
+
+    .leistung-item-link:hover .leistung-image-wrapper .mehr-erfahren-button {
+      opacity: 1;
+      /* visibility: visible; wird entfernt */
     }
 
     /* Individuelle Positionierung der Linien */
@@ -1170,17 +1221,32 @@
     </h2>
     <div class="leistungen-items-container">
       <div class="leistung-item">
-        <img src="/assets/dmp.png" alt="DMP-Betreuung Icon" class="leistung-icon">
+        <a href="/leistungen#akute-behandlung" class="leistung-item-link">
+          <div class="leistung-image-wrapper">
+            <img src="/assets/dmp.png" alt="DMP-Betreuung Icon" class="leistung-icon">
+            <div class="mehr-erfahren-button">Mehr erfahren</div>
+          </div>
+        </a>
         <div class="leistung-line"></div>
         <p class="leistung-label">DMP-Betreuung</p>
       </div>
       <div class="leistung-item">
-        <img src="/assets/diagnostik.png" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
+        <a href="/leistungen#moderne-diagnostik" class="leistung-item-link">
+          <div class="leistung-image-wrapper">
+            <img src="/assets/diagnostik.png" alt="Diagnostik & Überwachung Icon" class="leistung-icon">
+            <div class="mehr-erfahren-button">Mehr erfahren</div>
+          </div>
+        </a>
         <div class="leistung-line"></div>
         <p class="leistung-label">Diagnostik & Überwachung</p>
       </div>
       <div class="leistung-item">
-        <img src="assets/diabetes.png" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
+        <a href="/leistungen#chronische-betreuung" class="leistung-item-link">
+          <div class="leistung-image-wrapper">
+            <img src="/assets/diabetes.png" alt="Vorsorge und Impfungen Icon" class="leistung-icon">
+            <div class="mehr-erfahren-button">Mehr erfahren</div>
+          </div>
+        </a>
         <div class="leistung-line"></div>
         <p class="leistung-label">Vorsorge und Impfungen</p>
       </div>
