--- a/leistungen.html
+++ b/leistungen.html
@@ -1337,7 +1337,7 @@
     </div>
   </div>
 
-  <div class="leistungen-section"> <!-- Beginn der kopierten Sektion -->
+  <div class="leistungen-section" id="akute-behandlung"> <!-- Beginn der kopierten Sektion -->
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
       <h3 class="sub-heading">Wenn schnelle Hilfe zählt</h3>
@@ -1385,7 +1385,7 @@
     <!-- Anderer Inhalt der .leistungen-section kann hier folgen -->
   </div>
 
-  <div class="sprechzeiten-section">
+  <div class="sprechzeiten-section" id="moderne-diagnostik">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1445,7 +1445,7 @@
     </div>
   </div>
 
-  <div class="leistungen-section"> <!-- Wiederverwendung der Klasse für konsistentes Styling, ggf. anpassen -->
+  <div class="leistungen-section" id="chronische-betreuung"> <!-- Wiederverwendung der Klasse für konsistentes Styling, ggf. anpassen -->
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
@@ -1491,7 +1491,7 @@
     </div>
   </div>
 
-  <div class="leistungen-section">
+  <div class="leistungen-section" id="vorsorge-impfschutz">
     <div class="section-divider"></div>
     <div class="sub-heading-container">
       <span class="sub-heading-bullet">&bull;</span>
