--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
       justify-content: center;
       align-items: center;
       margin-bottom: 15px; /* Abstand nach unten, wie beim ursprünglichen .leistung-icon */
-      background-color: #f0f0f0; /* Heller Hintergrund, falls Bilder Transparenz haben */
+      background-color: #ffffff; /* Geändert zu Weiß */
       border-radius: 4px; /* Leichte Abrundung für den Wrapper */
     }
 
