--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
       bottom: 15px; /* Abstand von unten */
       right: 15px; /* Abstand von rechts */
       /* transform: translate(-50%, -50%); wird entfernt */
-      background-color: rgba(110, 55, 14, 0.8); /* #6e370e mit 0.8 Transparenz */
+      background-color: #6e370e; /* #6e370e ohne Transparenz (Alpha = 1) */
       color: white;
       padding: 12px 24px;
       border-radius: 50px; /* Pillenform */
