--- a/index.html
+++ b/index.html
@@ -425,8 +425,8 @@
 
     .mehr-erfahren-button {
       position: absolute;
-      bottom: 15px; /* Abstand von unten */
-      right: 15px; /* Abstand von rechts */
+      bottom: 3px; /* Abstand von unten erhöht */
+      right: 3px; /* Abstand von rechts erhöht */
       /* transform: translate(-50%, -50%); wird entfernt */
       background-color: #ffffff; /* Standard: Hintergrund weiß */
       color: #6e370e; /* Standard: Schriftfarbe #6e370e */
