--- a/faq.html
+++ b/faq.html
@@ -958,7 +958,9 @@
       font-weight: 300; /* Poppins Light */
       font-size: 12px; /* Schriftgröße auf 12px gesetzt */
       color: #ffffff; /* Helle Schrift für dunklen Footer */
-      text-decoration: none;
+      text-decoration: underline; /* Unterstreichung hinzugefügt */
+      text-decoration-color: #ffffff; /* Farbe des Unterstrichs auf Weiß gesetzt */
+      text-underline-offset: 3px; /* Kleiner Abstand zwischen Text und Unterstrich */
       margin-bottom: 8px; /* Abstand zwischen den Links */
     }
     .footer-bottom-right-links a:last-child {
