--- a/kontakt.html
+++ b/kontakt.html
@@ -603,7 +603,7 @@
       transition: height 0.5s ease-out;
     }
     .sprechzeiten-tabelle.start-animation thead th:not(:first-child)::before {
-      height: 350px; /* Feste Höhe, die die Tabelle abdeckt (ggf. anpassen an Tabellenhöhe) */
+      height: 380px; /* Feste Höhe, die die Tabelle abdeckt (ggf. anpassen an Tabellenhöhe) - Wert erhöht */
     }
 
     .sprechzeiten-hinweis {
