--- a/faq.html
+++ b/faq.html
@@ -571,8 +571,18 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
-      top: -25px; /* Beginnt 15px über dem Inhalt des Containers */
-      bottom: -55px; /* Endet 15px unter dem Inhalt des Containers */
+      top: -25px; /* Startpunkt der Linie, 25px über dem Container-Inhalt */
+      /* bottom: -55px; Entfernt, da Höhe die Länge steuert */
+      height: 0; /* Initial keine Höhe, für die Animation */
+      transition: height 0.8s ease-out; /* Animation für die Höhe */
+    }
+
+    /* Klasse zum Auslösen der Linienanimation */
+    .neue-faq-sektion .kontakt-vertikale-linie-element.animate-draw {
+      /* Die volle Höhe der Linie.
+         100% = Höhe des .kontakt-layout-container
+         + 25px (Abstand oben) + 55px (Abstand unten) = 100% + 80px */
+      height: calc(100% + 80px);
     }
 
     .neue-faq-sektion .kontakt-info-rechts {
@@ -622,14 +632,11 @@
         transform: none; /* Transform zurücksetzen */
 
         width: 80%; /* Linie wird horizontal, wenn Spalten gestapelt sind */
-        height: 1px;
+        height: 1px !important; /* Feste Höhe für horizontale Linie, !important zur Sicherheit ggü. .animate-draw */
         margin: 25px 0; /* Abstand um die horizontale Linie */
         align-self: center;
-        padding-right: 0;
-        padding-left: 0;
-        text-align: center; /* Text zentrieren auf kleinen Bildschirmen */
-        flex-basis: auto; /* Flex-Basis zurücksetzen */
-        width: 100%; /* Volle Breite für gestapelte Elemente */
+        /* padding-right, padding-left etc. hier nicht relevant für das Linien-Element selbst */
+        transition: none; /* Keine Höhenanimation für die horizontale Linie */
       }
       .neue-faq-sektion .kontakt-text-links {
         margin-bottom: 0; /* Kein doppelter Margin mit der Linie */
@@ -1331,6 +1338,34 @@
         checkSectionDividersVisibility(); // Animation für Section Dividers prüfen
         checkQuoteAnimation(); // Zitat-Animation prüfen
         checkFooterTitleAnimation(); // Animation für Footer-Titel prüfen
+      }
+      
+      // Animation für die vertikale Linie im "Ihre Kontaktwege"-Bereich
+      const alleNeueFaqSektionen = document.querySelectorAll('.neue-faq-sektion');
+      if (alleNeueFaqSektionen.length >= 2) { // Es gibt zwei .neue-faq-sektion Elemente, das zweite ist das Ziel
+        const kontaktwegeSektionContainer = alleNeueFaqSektionen[1]; // Die Sektion "Ihre Kontaktwege"
+        const kontaktLinieElement = kontaktwegeSektionContainer.querySelector('.kontakt-vertikale-linie-element');
+        // Beobachte den Layout-Container oder die Sektion selbst
+        const elementToObserveForLine = kontaktwegeSektionContainer.querySelector('.kontakt-layout-container') || kontaktwegeSektionContainer;
+
+        if (kontaktLinieElement && elementToObserveForLine) {
+          const lineObserverOptions = {
+            root: null,
+            rootMargin: '0px',
+            threshold: 0.1 // Animation starten, wenn 10% des Elements sichtbar sind
+          };
+
+          const lineAnimationObserver = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+              if (entry.isIntersecting) {
+                kontaktLinieElement.classList.add('animate-draw');
+                observer.unobserve(entry.target); // Animation nur einmal auslösen
+              }
+            });
+          }, lineObserverOptions);
+
+          lineAnimationObserver.observe(elementToObserveForLine);
+        }
       }
 
       window.addEventListener('scroll', checkMenuPosition);
