--- a/faq.html
+++ b/faq.html
@@ -646,7 +646,7 @@
     /* FAQ Slideshow Stile */
     .faq-slideshow-container {
       /* width: 100%; */ /* Ersetzt für volle Viewport-Breite */
-      width: 100vw; /* Nimmt die volle Breite des Ansichtsfensters ein */
+      width: 80vw; /* Nimmt 80% der Breite des Ansichtsfensters ein */
       position: relative; /* Erforderlich für die left/transform Zentrierung */
       left: 50%;
       transform: translateX(-50%);
