--- a/faq.html
+++ b/faq.html
@@ -671,13 +671,13 @@
     .faq-slideshow-container::before {
       left: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to right, #ffffff 50%, rgba(255,255,255,0.7) 80%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to right, #ffffff 0%, #ffffff 35%, rgba(255,255,255,0.9) 50%, rgba(255,255,255,0.7) 65%, rgba(255,255,255,0.4) 80%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-container::after {
       right: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to left, #ffffff 50%, rgba(255,255,255,0.7) 80%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to left, #ffffff 0%, #ffffff 35%, rgba(255,255,255,0.9) 50%, rgba(255,255,255,0.7) 65%, rgba(255,255,255,0.4) 80%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-wrapper {
