--- a/faq.html
+++ b/faq.html
@@ -671,13 +671,13 @@
     .faq-slideshow-container::before {
       left: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to right, #ffffff 25%, rgba(255,255,255,0.95) 35%, rgba(255,255,255,0.90) 45%, rgba(255,255,255,0.80) 55%, rgba(255,255,255,0.65) 65%, rgba(255,255,255,0.45) 75%, rgba(255,255,255,0.25) 85%, rgba(255,255,255,0.05) 95%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to right, #ffffff 25%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.93) 40%, rgba(255,255,255,0.89) 45%, rgba(255,255,255,0.84) 50%, rgba(255,255,255,0.78) 55%, rgba(255,255,255,0.71) 60%, rgba(255,255,255,0.63) 65%, rgba(255,255,255,0.54) 70%, rgba(255,255,255,0.44) 75%, rgba(255,255,255,0.33) 80%, rgba(255,255,255,0.22) 85%, rgba(255,255,255,0.11) 90%, rgba(255,255,255,0.03) 95%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-container::after {
       right: 0;
       /* Neuer Farbverlauf: außen sanft, dann schneller clean */
-      background: linear-gradient(to left, #ffffff 25%, rgba(255,255,255,0.95) 35%, rgba(255,255,255,0.90) 45%, rgba(255,255,255,0.80) 55%, rgba(255,255,255,0.65) 65%, rgba(255,255,255,0.45) 75%, rgba(255,255,255,0.25) 85%, rgba(255,255,255,0.05) 95%, rgba(255,255,255,0) 100%);
+      background: linear-gradient(to left, #ffffff 25%, rgba(255,255,255,0.98) 30%, rgba(255,255,255,0.96) 35%, rgba(255,255,255,0.93) 40%, rgba(255,255,255,0.89) 45%, rgba(255,255,255,0.84) 50%, rgba(255,255,255,0.78) 55%, rgba(255,255,255,0.71) 60%, rgba(255,255,255,0.63) 65%, rgba(255,255,255,0.54) 70%, rgba(255,255,255,0.44) 75%, rgba(255,255,255,0.33) 80%, rgba(255,255,255,0.22) 85%, rgba(255,255,255,0.11) 90%, rgba(255,255,255,0.03) 95%, rgba(255,255,255,0) 100%);
     }
 
     .faq-slideshow-wrapper {
